<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/multiplayer_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateGameActivity">

    <ImageView
        android:id="@+id/scrabble_logo"
        android:layout_width="595dp"
        android:layout_height="123dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lossless_page1_1655px_logo_scrabble_verd_tif" />

    <LinearLayout
        android:id="@+id/create_game_main_container"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:padding="50dp"
        android:background="#E6E6F1"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrabble_logo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:baselineAligned="true"
                android:gravity="center_vertical"
                android:text="@string/create_game_room_name"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/room_name_input"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:ems="10"
                android:hint="Nom de la salle"
                android:inputType="textPersonName"
                android:minHeight="48dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dictionnary_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:baselineAligned="false"
                android:gravity="center_vertical"
                android:text="@string/create_game_dictionnary"
                android:textSize="24dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/dictionnary_select"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                android:entries="@array/dictionary_dropdown"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textVie10"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:baselineAligned="false"
                android:gravity="center_vertical"
                android:text="@string/create_game_timer"
                android:textSize="24dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/timer_subtract_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:backgroundTint="@color/white"
                android:text="@string/timer_subtract_button"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/timer_text_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:baselineAligned="false"
                android:gravity="center"
                android:textSize="24dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/timer_add_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:backgroundTint="@color/white"
                android:text="@string/timer_add_button"
                android:textColor="@color/black"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/room_visibility_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:baselineAligned="false"
                android:gravity="center_vertical"
                android:text="@string/create_game_room_visibility"
                android:textSize="24dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/room_visibility_select"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                android:entries="@array/room_visibility_dropdown"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/password_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:baselineAligned="false"
                android:gravity="center_vertical"
                android:text="@string/create_game_password"
                android:textSize="24dp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/password_switch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"/>

            <EditText
                android:id="@+id/password_input"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:ems="10"
                android:hint="Nom de la salle"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:visibility="invisible" />

        </LinearLayout>

        <Button
            android:id="@+id/create_room_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:width="600dp"
            android:backgroundTint="@color/green_1"
            android:text="@string/create_room_button"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <Button
            android:id="@+id/home_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#D1827C"
            android:text="@string/return_home_button"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_room_bottom" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
