<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GamePassword"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="horizontal"
        android:background="@color/white"
        android:baselineAligned="true">

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:background="@drawable/bg9"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingBottom="20dp"
                android:gravity="start"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/roomPassword"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/newUsernameInput"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:text="@string/textPasswordInput"
                    android:gravity="start"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/modifyAvatarCancelButton"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_marginBottom="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/red_1"
                    android:text="@string/cancelButton"
                    android:textColor="@color/gray_1"/>

                <Button
                    android:id="@+id/modifyAvatarSaveButton"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_marginBottom="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/green_1"
                    android:text="@string/continueButton"
                    android:textColor="@color/gray_1"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
