<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModifyUsername"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="0.4"
        android:gravity="start"
        android:orientation="horizontal"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal"
            android:background="@color/white"
            android:baselineAligned="true">

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:background="@drawable/bg9"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/modifyProfileMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/textModifyUsername"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:id="@+id/modifyImageContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    android:paddingBottom="20dp"
                    android:gravity="start"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/textCurrentUsername"
                            android:textSize="20sp"
                            android:textColor="@color/black"/>

                        <TextView
                            android:id="@+id/currentUsername"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="pablo1"
                            android:textSize="20sp"
                            android:textColor="@color/black"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/textNewUsername"
                            android:textSize="20sp"
                            android:textColor="@color/black"/>

                        <EditText
                            android:id="@+id/newUsernameInput"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:inputType="text"
                            android:text="@string/textNewUsernameInput"
                            android:gravity="start"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/modifyAvatarCancelButton"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:layout_marginBottom="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="10dp"
                        android:backgroundTint="@color/red_1"
                        android:text="@string/cancelButton"
                        android:textColor="@color/gray_1"/>

                    <Button
                        android:id="@+id/modifyAvatarSaveButton"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:layout_marginBottom="20dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="20dp"
                        android:backgroundTint="@color/green_1"
                        android:text="@string/saveButton"
                        android:textColor="@color/gray_1"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
