<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/popup_window_background"
    tools:context=".ModifyAvatar"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:id="@+id/popup_window_view_with_border"
        android:background="@color/white"
        android:gravity="start"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:baselineAligned="true"
            android:gravity="start"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:background="@drawable/bg9"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/modifyProfileMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/textModifyAvatar"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/modifyImageContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="horizontal"
                    android:paddingHorizontal="20dp"
                    android:paddingBottom="20dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/green_1"
                        android:gravity="start"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="145dp"
                            android:layout_height="145dp"
                            android:contentDescription="@string/logo"
                            app:srcCompat="@drawable/mario">

                        </ImageView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="145dp"
                            android:layout_height="145dp"
                            android:contentDescription="@string/logo"
                            app:srcCompat="@drawable/mario">

                        </ImageView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="145dp"
                            android:layout_height="145dp"
                            android:contentDescription="@string/logo"
                            app:srcCompat="@drawable/mario">

                        </ImageView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="145dp"
                            android:layout_height="145dp"
                            android:contentDescription="@string/logo"
                            app:srcCompat="@drawable/mario">

                        </ImageView>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/modifyAvatarCancelButton"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="20dp"
                        android:layout_weight="0.5"
                        android:backgroundTint="@color/red_1"
                        android:text="@string/cancelButton"
                        android:textColor="@color/gray_1" />

                    <Button
                        android:id="@+id/modifyAvatarSaveButton"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="20dp"
                        android:layout_weight="0.5"
                        android:backgroundTint="@color/green_1"
                        android:text="@string/saveButton"
                        android:textColor="@color/gray_1" />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
